Add uri to song entity