@@ -1,6 +1,5 @@
 package de.kifo.commands;
 
-import com.google.common.collect.ImmutableList;
 import com.google.inject.Inject;
 import de.kifo.JavaBot;
 import de.kifo.commands.handle.CommandBase;
@@ -16,7 +15,6 @@ import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
 
-import static de.kifo.common.enums.exception.ExceptionType.USER_ALREADY_REGISTERED;
 import static de.kifo.common.enums.message.Message.MessageType.MESSAGE;
 import static de.kifo.common.util.EmbedUtils.getEmbedMessageByText;
 import static net.dv8tion.jda.api.interactions.commands.OptionType.STRING;
@@ -36,10 +34,6 @@ public class RegisterCommand extends CommandBase {
         long userId = member.getIdLong();
         User user = javaBot.getApi().getUserById(userId);
 
-        /*if (javaBot.getApi().isUserRegistered(user)) {
-            throw new CommandException(USER_ALREADY_REGISTERED, event);
-        }*/
-
         String password = options.get(0).getAsString();
         user.setPassword(password);
         javaBot.getApi().updateUser(user);
@@ -54,7 +48,7 @@ public class RegisterCommand extends CommandBase {
     public void autoComplete(String optionName, CommandAutoCompleteInteractionEvent event) {}
 
     @Override
-    public List<OptionData> getOptions() {
-        return ImmutableList.of(new OptionData(STRING, "passwort", "Wähle ein Passwort für deinen Account.", true, false));
+    public @NotNull List<OptionData> getOptions() {
+        return List.of(new OptionData(STRING, "passwort", "Wähle ein Passwort für deinen Account.", true, false));
     }
 }
